# EnginerrUp

./: energy_lattice_detect.sh  mapping.sh  moveit2.sh  my_navigation_debug_note.txt  nav.sh  pre.sh  readme.md  voice_control.sh
src/energy_rec/: package.xml  setup.py
src/energy_rec/energy_rec/: energy_rec.py
src/energy_reco/: CMakeLists.txt  package.xml
src/energy_reco/msg/: SendMessage.msg
src/engineer_bringup/launch/: engineer_moveit2.launch.xml
src/online_asr/launch/: voice_control_with_feedback.launch.py
src/online_asr/online_asr/: voice_control_node.py
src/online_asr/python_asr/: asr.py  tts.py
src/rm_algorithm/armbot_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/rm_algorithm/engineer_moveit2/: .setup_assistant  CMakeLists.txt  package.xml
src/rm_bringup/: CMakeLists.txt  package.xml
src/rm_bringup/config/: ros2_controllers.yaml
src/rm_bringup/launch/: engineer_moveit2.launch.xml  model.launch.xml
src/rm_description/launch/: display.launch.xml
src/rm_description/meshes/: gripper_base_link.STL  link_2.STL  link_4.STL  link_6.STL  link_gripper_down.STL  link_gripper_left.STL  link_gripper_right.STL  link_gripper_up.STL  link_store_left.STL  link_store_right.STL
src/rm_description/urdf/: arm.xacro  armbot.urdf  engineer.ros2_control.xacro  engineer.xacro  gripper.xacro  mechine_arm.urdf
src/rm_hardware/: CMakeLists.txt  package.xml
src/rm_hardware/src/: engineer_hardware_interface.cpp
src/rm_visual/energy_rec/: setup.cfg  setup.py
src/rm_voice/: readME.md
src/rm_voice/asr/: package.xml  setup.py
(+67 files in other folders)
